--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,40 @@ header .header-socialmedia  div a {
     color: black;
     font-size: 1.4rem;
 }
+
+/*Sección del header el nav*/
+nav {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    background-color: cadetblue;
+}
+
+nav .nav-logo-container a {
+    text-decoration: none;
+    font-size: 2.4rem;
+    color: black;
+}
+
+nav .nav-logo-container {
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+}
+
+nav .nav--profile-link {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    margin-right: 50px;
+    align-items: center;
+}
+
+nav .nav--profile-link a {
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: black;
+}
+
+
+
