--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,15 @@ body {
     right: 0;
 }
 
+/*Imagen de fondo*/
+main {
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/assets/img/Cover.png");   
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 /*Estilos al header*/
 header {
@@ -56,38 +65,35 @@ header .header-socialmedia  div a {
 }
 
 /*Sección del header el nav*/
+
 nav {
     width: 100%;
-    height: 100px;
-    display: flex;
-    background-color: cadetblue;
-}
-
-nav .nav-logo-container a {
-    text-decoration: none;
-    font-size: 2.4rem;
-    color: black;
-}
-
-nav .nav-logo-container {
-    display: flex;
-    align-items: center;
-    margin-left: 50px;
+    height: 90px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 nav .nav--profile-link {
-    width: 100%;
     display: flex;
+    align-items: center;
     justify-content: end;
     margin-right: 50px;
-    align-items: center;
 }
 
 nav .nav--profile-link a {
     text-decoration: none;
     font-size: 1.4rem;
+    border-bottom: 1px solid black;
     color: black;
 }
+nav .nav-logo-container {
+    display: flex;
+    align-items: center;
+}
+nav .nav-logo-container img {
+    width: 220px;
+}
+
 
 
 
