--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ header .header-socialmedia  div a {
 }
 
 /*Sección del header el nav*/
-
 nav {
     width: 100%;
     height: 90px;
@@ -94,7 +93,35 @@ nav .nav-logo-container img {
     width: 220px;
 }
 
+/*Titulo de la pagina*/
+main {
+    display: flex;
+    justify-content: center;
+}
 
+main .main-title-container {
+    margin-top: 70px;
+    width: 60%;
+    height: auto;
+    text-align: center;
+}
 
+main .main-title-container h1 {
+    color: white;
+    font-family: 'Varela Round', Helvetica, Arial, sans-serif;
+    font-size: 3rem;
+}
+
+main .main-title-container a {
+    display: inline-block;
+    margin-top: 100px;
+    text-decoration: none;
+    background-color: var(--principalColor);
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: black;
+    border: 1px solid white;
+    padding: 5px;
+}
 
 
