--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*Variables*/
 :root {
-    --principalColor: #41C7A4;
+    --principalColor: #2E94B9;
     --soft-white: #FEFCFF;
 }
 
@@ -13,6 +13,7 @@
 
 html {
     font-size: 62.5%;
+    font-family: 'Varela Round', Helvetica, Arial, sans-serif;
     /* font-family: ; */
 }
 
@@ -67,7 +68,7 @@ header .header-socialmedia  div a {
 /*Sección del header el nav*/
 nav {
     width: 100%;
-    height: 90px;
+    height: 100px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -81,16 +82,22 @@ nav .nav--profile-link {
 
 nav .nav--profile-link a {
     text-decoration: none;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     border-bottom: 1px solid black;
     color: black;
 }
 nav .nav-logo-container {
     display: flex;
     align-items: center;
+    margin-left: 50px;
+
 }
 nav .nav-logo-container img {
-    width: 220px;
+    width: 100px;
+    height: auto;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 /*Titulo de la pagina*/
@@ -108,7 +115,6 @@ main .main-title-container {
 
 main .main-title-container h1 {
     color: white;
-    font-family: 'Varela Round', Helvetica, Arial, sans-serif;
     font-size: 3rem;
 }
 
