--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 /*Imagen de fondo*/
 main {
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 150px);
     background-image: url("/assets/assets/img/Cover.png");   
     background-size: cover;
     background-repeat: no-repeat;
@@ -82,7 +82,7 @@ nav .nav--profile-link {
 
 nav .nav--profile-link a {
     text-decoration: none;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     border-bottom: 1px solid black;
     color: black;
 }
@@ -116,6 +116,8 @@ main .main-title-container {
 main .main-title-container h1 {
     color: white;
     font-size: 3rem;
+    font-weight: 700;
+    letter-spacing: 1rem;
 }
 
 main .main-title-container a {
