--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@
 
 html {
     font-size: 62.5%;
-    font-family: 'Varela Round', Helvetica, Arial, sans-serif;
-    /* font-family: ; */
+    font-family: 'Roboto Mono', monospace;
 }
 
 /*Truco en css para que una pagina no haga ningun tipo de scroll*/
@@ -114,6 +113,7 @@ main .main-title-container {
 }
 
 main .main-title-container h1 {
+    font-family: 'Roboto Mono', monospace;
     color: white;
     font-size: 3rem;
     font-weight: 700;
